tests/expectations/compiler/array/array_initialization_fail.out
Error [ETYC0372117]: Expected type `[bool; 8]` but type `[bool; 7]` was found.
    --> compiler-test:3:16
     |
   3 |         return [a, a, a, a, a, a, a];
     |                ^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372117]: Expected type `u8` but type `u32` was found.
    --> compiler-test:7:52
     |
   7 |         return [1u8, 2u8, 3u8, 4u8, 5u8, 6u8, 7u8, 8u32];
     |                                                    ^^^^
Error [ETYC0372117]: Expected type `u8` but type `u32` was found.
    --> compiler-test:7:52
     |
   7 |         return [1u8, 2u8, 3u8, 4u8, 5u8, 6u8, 7u8, 8u32];
     |                                                    ^^^^
